@@ -1,5 +1,5 @@
 // -*- coding: utf-8 -*-
-// Copyright (C) 2009-2020 Laboratoire de Recherche et Développement
+// Copyright (C) 2009-2021 Laboratoire de Recherche et Développement
 // de l'Epita (LRDE).
 // Copyright (C) 2003-2006 Laboratoire d'Informatique de Paris 6
 // (LIP6), département Systèmes Répartis Coopératifs (SRC), Université
@@ -526,6 +526,8 @@ namespace std {
     }
 %}
 
+%feature("flatnested") spot::twa::prop_set;
+%rename (twa_prop_set) spot::twa::prop_set;
 %include <spot/twa/twa.hh>
 
 %include <spot/tl/apcollect.hh>
